fixed z-index issues on small screens

--- a/css/general.styl
+++ b/css/general.styl
@@ -111,5 +111,8 @@ hr
     margin: auto
 
 @media (min-width: 768px) and (max-width: 992px)
+  .sm-top
+    z-index: 2
   .sm-up
     margin-top: -94px
+    z-index: 1
